--- a/tensfor_board.ipynb
+++ b/tensfor_board.ipynb
@@ -2,18 +2,9 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "The tensorboard extension is already loaded. To reload it, use:\n",
-      "  %reload_ext tensorboard\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import os\n",
     "import datetime\n",
@@ -24,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -246,7 +237,7 @@
        "[5 rows x 72 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -267,7 +258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +289,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 5,
    "metadata": {
     "scrolled": true
    },
@@ -308,64 +299,64 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/25\n",
-      "1160/1160 [==============================] - 5s 4ms/step - loss: 0.4061 - accuracy: 0.8380 - val_loss: 0.3472 - val_accuracy: 0.8595\n",
+      "1160/1160 [==============================] - 4s 3ms/step - loss: 0.4022 - accuracy: 0.8376 - val_loss: 0.2917 - val_accuracy: 0.8866\n",
       "Epoch 2/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.3053 - accuracy: 0.8765 - val_loss: 0.2783 - val_accuracy: 0.8881\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2835 - accuracy: 0.8873 - val_loss: 0.2864 - val_accuracy: 0.8819\n",
       "Epoch 3/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2802 - accuracy: 0.8865 - val_loss: 0.2776 - val_accuracy: 0.8877\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2761 - accuracy: 0.8884 - val_loss: 0.2769 - val_accuracy: 0.8880\n",
       "Epoch 4/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2749 - accuracy: 0.8886 - val_loss: 0.2769 - val_accuracy: 0.8873\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2737 - accuracy: 0.8891 - val_loss: 0.2748 - val_accuracy: 0.8886\n",
       "Epoch 5/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2763 - accuracy: 0.8880 - val_loss: 0.2777 - val_accuracy: 0.8882\n",
+      "1160/1160 [==============================] - 4s 3ms/step - loss: 0.2815 - accuracy: 0.8853 - val_loss: 0.2745 - val_accuracy: 0.8880\n",
       "Epoch 6/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2736 - accuracy: 0.8886 - val_loss: 0.2731 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2742 - accuracy: 0.8880 - val_loss: 0.2735 - val_accuracy: 0.8889\n",
       "Epoch 7/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2726 - accuracy: 0.8881 - val_loss: 0.2731 - val_accuracy: 0.8882\n",
+      "1160/1160 [==============================] - 4s 4ms/step - loss: 0.2747 - accuracy: 0.8883 - val_loss: 0.2796 - val_accuracy: 0.8884\n",
       "Epoch 8/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2697 - accuracy: 0.8893 - val_loss: 0.2767 - val_accuracy: 0.8886\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2743 - accuracy: 0.8879 - val_loss: 0.2731 - val_accuracy: 0.8887\n",
       "Epoch 9/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2719 - accuracy: 0.8879 - val_loss: 0.2714 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2719 - accuracy: 0.8887 - val_loss: 0.2738 - val_accuracy: 0.8887\n",
       "Epoch 10/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2708 - accuracy: 0.8881 - val_loss: 0.2728 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2716 - accuracy: 0.8879 - val_loss: 0.2740 - val_accuracy: 0.8886\n",
       "Epoch 11/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2674 - accuracy: 0.8891 - val_loss: 0.2717 - val_accuracy: 0.8886\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2703 - accuracy: 0.8886 - val_loss: 0.2745 - val_accuracy: 0.8887\n",
       "Epoch 12/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2672 - accuracy: 0.8891 - val_loss: 0.2709 - val_accuracy: 0.8871\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2728 - accuracy: 0.8880 - val_loss: 0.2759 - val_accuracy: 0.8876\n",
       "Epoch 13/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2684 - accuracy: 0.8881 - val_loss: 0.2679 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2698 - accuracy: 0.8879 - val_loss: 0.2717 - val_accuracy: 0.8886\n",
       "Epoch 14/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2662 - accuracy: 0.8883 - val_loss: 0.2671 - val_accuracy: 0.8890\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2688 - accuracy: 0.8881 - val_loss: 0.2707 - val_accuracy: 0.8883\n",
       "Epoch 15/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2663 - accuracy: 0.8877 - val_loss: 0.2658 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2665 - accuracy: 0.8895 - val_loss: 0.2736 - val_accuracy: 0.8884\n",
       "Epoch 16/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2651 - accuracy: 0.8885 - val_loss: 0.2693 - val_accuracy: 0.8883\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2676 - accuracy: 0.8893 - val_loss: 0.2706 - val_accuracy: 0.8878\n",
       "Epoch 17/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2635 - accuracy: 0.8888 - val_loss: 0.2725 - val_accuracy: 0.8868\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2672 - accuracy: 0.8888 - val_loss: 0.2739 - val_accuracy: 0.8887\n",
       "Epoch 18/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2628 - accuracy: 0.8893 - val_loss: 0.2686 - val_accuracy: 0.8870\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2686 - accuracy: 0.8883 - val_loss: 0.2699 - val_accuracy: 0.8889\n",
       "Epoch 19/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2620 - accuracy: 0.8888 - val_loss: 0.2675 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2655 - accuracy: 0.8895 - val_loss: 0.2672 - val_accuracy: 0.8885\n",
       "Epoch 20/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2609 - accuracy: 0.8888 - val_loss: 0.2630 - val_accuracy: 0.8882\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2653 - accuracy: 0.8889 - val_loss: 0.2695 - val_accuracy: 0.8878\n",
       "Epoch 21/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2604 - accuracy: 0.8897 - val_loss: 0.2662 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2655 - accuracy: 0.8891 - val_loss: 0.2680 - val_accuracy: 0.8880\n",
       "Epoch 22/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2611 - accuracy: 0.8900 - val_loss: 0.2625 - val_accuracy: 0.8889\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2643 - accuracy: 0.8884 - val_loss: 0.2692 - val_accuracy: 0.8876\n",
       "Epoch 23/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2591 - accuracy: 0.8893 - val_loss: 0.2650 - val_accuracy: 0.8886\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2624 - accuracy: 0.8903 - val_loss: 0.2691 - val_accuracy: 0.8878\n",
       "Epoch 24/25\n",
-      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2581 - accuracy: 0.8903 - val_loss: 0.2647 - val_accuracy: 0.8887\n",
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2614 - accuracy: 0.8907 - val_loss: 0.2674 - val_accuracy: 0.8886\n",
       "Epoch 25/25\n",
-      "1160/1160 [==============================] - 3s 3ms/step - loss: 0.2597 - accuracy: 0.8894 - val_loss: 0.2639 - val_accuracy: 0.8891\n"
+      "1160/1160 [==============================] - 3s 2ms/step - loss: 0.2637 - accuracy: 0.8890 - val_loss: 0.2694 - val_accuracy: 0.8884\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "<tensorflow.python.keras.callbacks.History at 0x7fbd0bca2430>"
+       "<tensorflow.python.keras.callbacks.History at 0x7ffe7b9577c0>"
       ]
      },
-     "execution_count": 18,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -382,13 +373,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Reusing TensorBoard on port 6006 (pid 3365), started 0:12:51 ago. (Use '!kill 3365' to kill it.)"
+       "Reusing TensorBoard on port 6006 (pid 3365), started 21:56:02 ago. (Use '!kill 3365' to kill it.)"
       ]
      },
      "metadata": {},
@@ -398,11 +389,11 @@
      "data": {
       "text/html": [
        "\n",
-       "      <iframe id=\"tensorboard-frame-f707c0ea4b805b86\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
+       "      <iframe id=\"tensorboard-frame-f9fef8b92d5b2e12\" width=\"100%\" height=\"800\" frameborder=\"0\">\n",
        "      </iframe>\n",
        "      <script>\n",
        "        (function() {\n",
-       "          const frame = document.getElementById(\"tensorboard-frame-f707c0ea4b805b86\");\n",
+       "          const frame = document.getElementById(\"tensorboard-frame-f9fef8b92d5b2e12\");\n",
        "          const url = new URL(\"/\", window.location);\n",
        "          const port = 6006;\n",
        "          if (port) {\n",
@@ -423,6 +414,15 @@
    ],
    "source": [
     "%tensorboard --logdir logs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#End"
    ]
   },
   {
